@@ -7,6 +7,7 @@ VERSION 2.2
     * More collection scanning speedups.
 
   BUGFIXES:
+    * Fix photos applet not working after resuming playback. (BR 206829)
     * Fix regression where the genre field in the Tag Dialog would show the
       composer of the track. (BR 208255)
     * Don't reshuffle the playlist every time the active track changes when
@@ -36,6 +37,7 @@ VERSION 2.2-rc1
     * Added "Lock layout" option to the main window's context menu.    
 
   BUGFIXES:
+    * Fix wikipedia engine refined search broken. (BR 208024)
     * Crash in QTextCodec while scanning collection has been fixed.
       Apparently. (BR 191447)
     * A dialog with "Can not write playlist (/)" was displayed when using
